--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,49 @@
+* {
+    border: 1px solid red;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .hero-image {
     width: 300px;
+}
+
+.header-hero-container {
+    background-color: #1F2937;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.main-text {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 800;
+}
+
+.secondary-text,
+a,
+button {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+button {
+    background-color: #3882F6;
+    border: 1px solid #3882F6;
+    padding: 4px 28px;
+    border-radius: 8px;
+    font-weight: 800;
 }
