--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,10 @@ img {
     color: #1F2937;
 }
 
+.quote-container {
+    background-color: #E5E7EB;
+}
+
 .quote {
     font-size: 36px;
     font-weight: 300;
