--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,8 @@ h1 {
 
 .secondary-text,
 a,
-button {
+button,
+footer {
     color: #E5E7EB;
     font-size: 18px;
 }
@@ -80,4 +81,13 @@ img {
 h3 {
     color: #1F2937;
     margin: 0;
+    font-weight: 800;
+}
+
+.cta-container h3 {
+    color: #F9FAF8;
+}
+
+.cta-container button {
+    border: 1px solid #E5E7EB;
 }
