--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,40 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    height: 100vh;
+    /*height: 100vh;*/
     margin: 0;
-}
-
-.hero-image {
-    width: 300px;
 }
 
 .header-hero-container {
     background-color: #1F2937;
+    padding: 0 8em;
+    /*display: flex;
+    flex-direction: column;
+    align-items: center;*/
+}
+
+header {
+    display: flex;
+    /*justify-content: space-around;*/
+    align-items: center;
+    padding: 18px 0;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 800;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+    display: flex;
+    gap: 18px;
+    margin-left: auto;
 }
 
 li {
@@ -45,6 +63,24 @@ footer {
     font-size: 18px;
 }
 
+.hero {
+    display: flex;
+    align-items: flex-start;
+    padding: 6em 0;
+}
+
+.hero-content {
+    flex: 1;
+}
+
+.hero-content button {
+    margin-top: 8px;
+}
+
+.hero-image img {
+    max-width: 350px;
+}
+
 button {
     background-color: #3882F6;
     border: 1px solid #3882F6;
@@ -60,11 +96,12 @@ h2 {
     margin: 0;
 }
 
-img {
+/*img {
     width: 100px;
-}
+}*/
 
 .card img {
+    width: 100px;
     border: 1px solid #3882F6;
     border-radius: 8px;
 }
