--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,17 @@
-/** {
-    border: 1px solid red;
-}*/
-
 body {
     font-family: 'Roboto', sans-serif;
-    /*height: 100vh;*/
     margin: 0;
 }
 
 .header-hero-container,
 footer {
     background-color: #1F2937;
-    padding: 0 8em;
-    /*display: flex;
-    flex-direction: column;
-    align-items: center;*/
+    padding: 0 12em;
 }
 
 header,
 footer {
     display: flex;
-    /*justify-content: space-around;*/
     align-items: center;
     padding: 18px 0;
 }
@@ -69,6 +60,7 @@ footer {
     display: flex;
     align-items: flex-start;
     padding: 6em 0;
+    gap: 2em;
 }
 
 .hero-content {
@@ -80,7 +72,7 @@ footer {
 }
 
 .hero-image img {
-    max-width: 350px;
+    max-width: 400px;
 }
 
 button {
@@ -112,10 +104,6 @@ h2 {
 .card {
     max-width: 200px;
 }
-
-/*img {
-    width: 100px;
-}*/
 
 .card img {
     width: 150px;
@@ -165,7 +153,7 @@ h3 {
     background-color: #3882F6;
     border-radius: 8px;
     display: flex;
-    padding: 2em 6em;
+    padding: 3em 8em;
     align-items: center;
     gap: 6em;
 }
